Cleaning up the pom.xml file.